<?xml version="1.0"?>
<package format="3">
  <name>pcl_div</name>
  <version>0.1.0</version>
  <description>returns gt ground and objects</description>

  <maintainer email="dominik.jargot@robotec.ai">Dominik Jargot</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>pcl_ros</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rosbag2_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
